# Nemo

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/game-engine/: drizzle.config.ts  package.json
apps/game-engine/drizzle/: 0000_marina_upgrades_phase_a.sql  0001_marina_upgrades_phase_a.sql  0002_cloudy_carnage.sql  (+1 more)
apps/weather-engine/: Dockerfile  README.md  pyproject.toml
apps/weather-engine/src/nemo_weather/: grid_builder.py  ingest.py  persistence.py  poller.py
apps/weather-engine/tests/: test_grid_builder.py  test_persistence.py  test_poller.py
apps/web/: eslint.config.mjs  next.config.ts  package.json  proxy.ts  tsconfig.json  vitest.config.ts
apps/web/src/: proxy.ts
apps/ws-gateway/: Dockerfile.base  package.json
docs/runbooks/: adding-a-boat-class.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
mockups/: admin-races-edit-v1.html  admin-races-v1.html  classement-race-v1.html  classement-v1.html  compass-v1.html  home-v1.html  login-v1.html  marina-boat-v1.html  marina-customize-v1.html  marina-v1.html  news-detail-v1.html  not-found-v1.html  play-v1.html  profile-settings-v1.html  profile-social-v1.html  profile-v1.html  races-v1.html  router-panel-v1.html  timeline-v1.html
scripts/: convert-polar-csv.mjs  convert-polar-xml.mjs  convert-vr-polars.ts  docker-cleanup.ps1  import-vr-imoca-polars.ts  sync-engine-data.mjs  sync-game-balance.mjs
scripts/vr-source/: class_40.json
(+563 files in other folders)
