[project]
name = "nemo-weather-engine"
version = "0.1.0"
description = "Ingestion NOAA GFS (vent U10/V10) + GFS Wave (SWH/MWD/MWP) vers Redis + JSON grids"
requires-python = ">=3.11"
dependencies = [
  "cfgrib>=0.9.14",
  "xarray>=2024.0.0",
  "numpy>=1.26",
  "requests>=2.31",
  "redis>=5.0",
  "pydantic>=2.5",
  "pino-python>=0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
nemo-weather-ingest = "nemo_weather.ingest:main"
